ADD translations for cross prices to allow displaying a prefix or a footnote for cross prices

--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -43,7 +43,7 @@
     {% if ('item.recommendedPrice' in itemData or 'all' in itemData) %}
         <div class="crossprice" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.unitPrice.value > 0 && currentVariation.prices.rrp.unitPrice.value > currentVariation.prices.default.unitPrice.value">
             <del class="text-muted small">
-                ${ currentVariation.prices.rrp.unitPrice.formatted }
+                ${ currentVariation.prices.rrp.unitPrice.formatted | itemCrossPrice  }
             </del>
         </div>
     {% endif %}
