--- a/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
@@ -90,7 +90,7 @@
                 <div class="prices">
                     <div class="price-view-port">
                         <del class="crossprice" v-if="displaySettings.showCrossPrice && prices.rrp.price.value > 0">
-                            ${ prices.rrp.price.formatted }
+                            ${ prices.rrp.price.formatted | itemCrossPrice  }
                         </del>
                     </div>
                     
