# Fixed: * appearance form item bundle

--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -30,7 +30,8 @@
 
                             </div>
 
-                            <item-bundle :bundle-type="basketItem.variation.data.variation.bundleType"
+                            <item-bundle :appearance="appearance"
+                                         :bundle-type="basketItem.variation.data.variation.bundleType"
                                          :bundle-components="basketItem.variation.data.bundleComponents"></item-bundle>
 
                             <div class="item-small-prices text-muted" v-if="!(basketItem.variation.data.unit.unitOfMeasurement === 'C62' && basketItem.variation.data.unit.content === 1) && basketItem.variation.data.variation.mayShowUnitPrice">
